api-gateway/k8s/ratelimit/ratelimit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: default
  labels:
    app: ratelimit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratelimit
  template:
    metadata:
      labels:
        app: ratelimit
    spec:
      containers:
        - name: ratelimit
          image: envoyproxy/ratelimit:master
          command: [ "/bin/ratelimit" ]
          ports:
            - name: grpc
              containerPort: 8081
            - name: http
              containerPort: 8080
            - name: debug
              containerPort: 6070
          volumeMounts:
            - name: config
              mountPath: /data/ratelimit/config/config.yaml
              subPath: config.yaml
        - name: statsd-exporter
          image: prom/statsd-exporter:latest
          ports:
            - containerPort: 8125
              protocol: UDP
            - containerPort: 9102
      volumes:
        - name: config
          configMap:
            name: ratelimit-config
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: default
  labels:
    app: ratelimit
spec:
  selector:
    app: ratelimit
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
    - name: http
      port: 8080
      targetPort: 8080
